<?xml version="1.0"?>
<package format="2">
  <name>pcl_tutorial</name>
  <version>0.0.0</version>
  <description>
     pcl_tutoial to get ready for the project 
  </description>
  <maintainer email="mtradovn@oakland.edu">Micho Radovnikovich</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <!-- <test_depend>rostest</test_depend> -->
</package>
